<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/header_background"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/header"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/set_your_goals"
        android:textSize="@dimen/text_header_main"
        android:textColor="@color/backgroundColor"
        android:textAlignment="center"
        />



    <EditText
        android:id="@+id/et_drink_goal_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_calories"
        android:hint = "0"
        android:textSize="@dimen/main_counter_text"
        android:layout_marginTop="32dp"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:enabled="false"
        />

    <TextView
        android:id="@+id/tv_drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_drink_goal_picker"
        app:layout_constraintBottom_toBottomOf="@id/et_drink_goal_picker"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/et_drink_goal_picker"
        android:text="@string/glasses"
        android:textSize="@dimen/text_header_secondary"
        />

    <EditText
        android:id="@+id/et_calories_goal_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_drink_goal_picker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_calories"
        android:hint="0000"
        android:textSize="@dimen/main_counter_text"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:enabled="false"
        />

    <TextView
        android:id="@+id/tv_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_calories_goal_picker"
        app:layout_constraintBottom_toBottomOf="@id/et_calories_goal_picker"
        app:layout_constraintLeft_toLeftOf="@id/tv_drink"
        android:text="@string/calories"
        android:textSize="@dimen/text_header_secondary"
        />

    <EditText
        android:id="@+id/et_training_goal_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_calories_goal_picker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_drink"
        android:hint="00"
        android:textSize="@dimen/main_counter_text"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:enabled="false"
        />

    <TextView
        android:id="@+id/tv_training"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_training_goal_picker"
        app:layout_constraintBottom_toBottomOf="@id/et_training_goal_picker"
        app:layout_constraintLeft_toLeftOf="@id/tv_calories"
        android:text="@string/minutes"
        android:textSize="@dimen/text_header_secondary"
        />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_training_goal_picker"
        android:background="@drawable/default_button_background"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:textColor="@color/backgroundColor"
        android:text="@string/edit"
        />

</androidx.constraintlayout.widget.ConstraintLayout>