<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="16dp"
    >

    <View
        android:id="@+id/v_add_food_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/v_add_food_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/v_add_food_header"
        android:text="@string/how_much_add"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/et_calories_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/v_add_food_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="000"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/tv_add_food_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_calories_counter"
        app:layout_constraintLeft_toLeftOf="@id/et_calories_counter"
        app:layout_constraintRight_toRightOf="@id/et_calories_counter"
        android:text="@string/calories"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/iv_add_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_add_food_calories"
        app:layout_constraintLeft_toLeftOf="@id/tv_add_food_calories"
        app:layout_constraintRight_toRightOf="@id/tv_add_food_calories"
        android:background="@drawable/button_background"
        />



</androidx.constraintlayout.widget.ConstraintLayout>